updated download link to latest pre-release

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </ul><h3>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<hr><p>Download <a href="https://github.com/michaelchadwick/standing-desk-app/standing-desk-app.dmg">Standing Desk App</a> and double-click the DMG file that appears on your local hard drive.</p>
+<hr><p>Download <a href="https://github.com/michaelchadwick/standing-desk-app/releases/download/v0.1.0/standing-desk-app.dmg">Standing Desk App</a> and double-click the DMG file that appears on your local hard drive.</p>
 
 <p>A folder will appear where you can drag the Standing Desk App.app file to your /Applications directory.</p>
 
