--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/michaelchadwick/standing-desk-app/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/michaelchadwick/standing-desk-app/tarball/master">Download this project as a tar.gz file</a>
+				<a class="dmg_download_link" href="https://github.com/michaelchadwick/standing-desk-app/releases/download/v0.2/standing-desk-app.dmg">Download this project as a .dmg</a>
             </section>
         </header>
     </div>
@@ -36,8 +35,10 @@
 
 <p><strong>Standing Desk App</strong> is a small utility by <strong>Puppy Bongos</strong> created to time how long you sit and stand while using a standing desk (or even just to remind you to stand up from sitting at a normal desk), all so you don't die from <em>butt death</em>.</p>
 
-<p><em>Butt death</em> is the worst kind of death.</p>
-
+<p><strong>Butt death</strong> is the <em>worst</em> kind of death.</p>
+<hr>
+<a href="#why-make-this-app">Why?</a> | <a href="#features">Features</a> | <a href="#installation">Installerate</a> | <a href="#usage">Usage</a> | <a href="#configuration">Config</a> | <a href="#versionhistory">v0.History</a>
+<hr>
 <h3>
 <a name="why-make-this-app" class="anchor" href="#why-make-this-app"><span class="octicon octicon-link"></span></a>Why Make This App?</h3>
 
@@ -70,19 +71,37 @@
 <hr><p>The Preferences window (which can be accessed from the main menubar icon) allows you to change the following settings:</p>
 
 <p><strong>General</strong>  </p>
-
 <ul>
-<li>Standing time</li>
-<li>Sitting time</li>
-<li>Pause after idle time</li>
-<li>Snooze time</li>
-<li>Start on login option</li>
-</ul><p><strong>Alerts</strong></p>
+	<li>Standing time</li>
+	<li>Sitting time</li>
+	<li>Pause after idle time</li>
+	<li>Snooze time</li>
+	<li>Start on login option</li>
+</ul>
 
+<p><strong>Alerts</strong></p>
 <ul>
-<li>Stand alert sound, and its volume</li>
-<li>Sit alert sound, and its volume</li>
+	<li>Stand alert sound, and its volume</li>
+	<li>Sit alert sound, and its volume</li>
 </ul><h3>
+	
+<h3>
+<a name="versionhistory" class="anchor" href="#versionhistory"><span class="octicon octicon-link"></span></a>Version History</h3>
+<hr>
+<p><strong>v0.2</strong>  </p>
+<ul>
+	<li>Bug stomping</li>
+	<li>Mostly functional!</li>
+</ul>
+<p><strong>v0.1</strong>  </p>
+<ul>
+	<li>Set sitting and standing time</li>
+	<li>Sweet icons</li>
+	<li>Pausing</li>	
+	<li>Snoozing</li>
+	<li>Start on login option</li>
+	<li>Moderately functional</li>
+</ul>
 <a name="questions-feedback-suggestions" class="anchor" href="#questions-feedback-suggestions"><span class="octicon octicon-link"></span></a>Questions, Feedback, Suggestions</h3>
 
 <ul>
