viewport for iOS fix

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Standing Desk App</title>
   </head>
 
