added version 0.9.1 to history and download links; updated the install instructions a little

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/michaelchadwick/standing-desk-app">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/PuppyBongos/standing-desk-app">View on GitHub</a>
 
           <h1 id="project_title">Standing Desk App</h1>
           <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
 
             <section id="downloads">
-        <a class="dmg_download_link" href="https://github.com/michaelchadwick/standing-desk-app/releases/download/v0.9/standing-desk-app.dmg" title="Download this project as a .dmg (v0.9)"></a>
+        <a class="dmg_download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/0.9.1/standing-desk-app-0.9.1.dmg" title="Download this project as a .dmg (v0.9.1)"></a>
             </section>
         </header>
     </div>
@@ -61,7 +61,7 @@
         <h3>
         <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-        <hr><p>Download <a href="https://github.com/michaelchadwick/standing-desk-app/releases/download/v0.9/standing-desk-app.dmg">Standing Desk App</a> (pre-release v0.9) and double-click the DMG file that appears on your local hard drive.</p>
+        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/0.9.1/standing-desk-app-0.9.1.dmg">Standing Desk App</a> (pre-release v0.9.1) and double-click the DMG file that appears on your local hard drive.</p>
 
         <p>A folder will appear where you can drag the Standing Desk App.app file to your /Applications directory.</p>
 
@@ -69,7 +69,7 @@
         <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h3>
 
         <hr>
-        <p>Double-click the .app file once it's installed. If it's your first time running the application, the Preferences window will appear, giving you a chance to peruse default settings and change them, if need be. Check the box that's labeled "Start application at login?" if you wish to never have to double-click the app ever again.</p>
+        <p>Double-click the .app file once it's installed. If it's your first time running the application, you may have to right-click on the .app file and choose "Open" from the dialog box (subsequent times won't require this). In addition, on initial load you should be presented with the Preferences window, giving you a chance to peruse default settings and change them, if need be. Check the box that's labeled "Start application at login?" if you wish to never have to double-click the app ever again.</p>
 
         <h3>
         <a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h3>
@@ -102,7 +102,14 @@
 
         <h3>Version History</h3>
         <hr>
-        <p><strong>v0.9</strong></p>
+        <p><strong>v0.9.1</strong> (10/2/2015)</p>
+        <ul>
+          <li>Global keyboard shortcuts are now handled through Cocoapods</li>
+          <li>Sleep/wake should pause/resume the timer appropriately</li>
+          <li>Icons more visible if Yosemite's dark mode is enabled</li>
+        </ul>
+
+        <p><strong>v0.9</strong> (3/8/2014)</p>
         <ul>
           <li>Stand/Sit Presets - choose from several options as a foundation for your standing desk usage</li>
           <li>Customizable global keyboard shortcuts</li>
@@ -110,13 +117,13 @@
           <li>Practically totally functional!</li>
         </ul>
 
-        <p><strong>v0.2</strong></p>
+        <p><strong>v0.2</strong> (2/3/2014)</p>
         <ul>
           <li>Bug stomping</li>
           <li>Mostly functional!</li>
         </ul>
 
-        <p><strong>v0.1</strong></p>
+        <p><strong>v0.1</strong> (1/16/2014)</p>
         <ul>
           <li>Set sitting and standing time</li>
           <li>Sweet icons</li>
