added 1.0 notes; minor fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>Standing Desk App</title>
   </head>
 
@@ -24,7 +24,7 @@
           <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
 
             <section id="downloads">
-        <a class="dmg_download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/0.9.1/standing-desk-app-0.9.1.dmg" title="Download this project as a .dmg (v0.9.1)"></a>
+        <a class="dmg_download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/standing-desk-app-1.0.dmg" title="Download this project as a .dmg (v1.0)"></a>
             </section>
         </header>
     </div>
@@ -39,7 +39,7 @@
 
         <p><strong>Butt death</strong> is the <em>worst</em> kind of death.</p>
         <hr>
-        <a href="#why-make-this-app">Why?</a> | <a href="#features">Features</a> | <a href="#installation">Installerate</a> | <a href="#usage">Usage</a> | <a href="#configuration">Config</a> | <a href="#versionhistory">v0.History</a>
+        <a href="#why-make-this-app">Why?</a> | <a href="#features">Features</a> | <a href="#installation">Installerate</a> | <a href="#usage">Usage</a> | <a href="#configuration">Config</a> | <a href="#change-log">Change Log</a>
         <hr>
         <h3>
         <a name="why-make-this-app" class="anchor" href="#why-make-this-app"><span class="octicon octicon-link"></span></a>Why Make This App?</h3>
@@ -57,11 +57,11 @@
           <li>Pause timer if you know you're going to be away (or you want to cheat)</li>
           <li>Uses both notifications and sound alerts to remind you of the next action</li>
         </ul>
-        
+
         <h3>
         <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/0.9.1/standing-desk-app-0.9.1.dmg">Standing Desk App</a> (pre-release v0.9.1) and double-click the DMG file that appears on your local hard drive.</p>
+        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/standing-desk-app-1.0.dmg">Standing Desk App</a> (release v1.0) and double-click the DMG file that appears on your local hard drive.</p>
 
         <p>A folder will appear where you can drag the Standing Desk App.app file to your /Applications directory.</p>
 
@@ -98,15 +98,22 @@
           <li>Skip keyboard global keyboard shortcut</li>
         </ul>
 
-        <a name="versionhistory" class="anchor" href="#versionhistory"><span class="octicon octicon-link"></span></a>
+        <a name="change-log" class="anchor" href="#change-log"><span class="octicon octicon-link"></span></a>
 
         <h3>Version History</h3>
         <hr>
+        <p><strong>v1.0</strong> (10/2/2015)</p>
+        <ul>
+          <li>Updates to CocoaPods and MASShortcut (for keyboard shortcuts)</li>
+          <li>Signed app so Apple should trust it</li>
+          <li>1.0 release!</li>
+        </ul>
+
         <p><strong>v0.9.1</strong> (10/2/2015)</p>
         <ul>
           <li>Global keyboard shortcuts are now handled through Cocoapods</li>
           <li>Sleep/wake should pause/resume the timer appropriately</li>
-          <li>Icons more visible if Yosemite's dark mode is enabled</li>
+          <li>Menubar icons more visible if Yosemite's dark mode is enabled</li>
         </ul>
 
         <p><strong>v0.9</strong> (3/8/2014)</p>
@@ -127,7 +134,7 @@
         <ul>
           <li>Set sitting and standing time</li>
           <li>Sweet icons</li>
-          <li>Pausing</li>  
+          <li>Pausing</li>
           <li>Snoozing</li>
           <li>Start on login option</li>
           <li>Moderately functional</li>
@@ -147,7 +154,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Standing Desk App maintained by <a href="https://github.com/michaelchadwick">michaelchadwick</a></p>
+        <p class="copyright">Standing Desk App maintained by <a href="https://github.com/PuppyBongos">Puppy Bongos</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
