link and run description changed from dmg to zip

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
 
             <section id="downloads">
-        <a class="dmg_download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/standing-desk-app-1.0.dmg" title="Download this project as a .dmg (v1.0)"></a>
+        <a class="zip_download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/Standing-Desk-App-1.0.zip" title="Download this project as a .zip (v1.0)"></a>
             </section>
         </header>
     </div>
@@ -61,15 +61,15 @@
         <h3>
         <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/standing-desk-app-1.0.dmg">Standing Desk App</a> (release v1.0) and double-click the DMG file that appears on your local hard drive.</p>
+        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/Standing-Desk-App-1.0.zip">Standing Desk App</a> (release v1.0) and double-click the ZIP file that appears on your local hard drive.</p>
 
-        <p>A folder will appear where you can drag the Standing Desk App.app file to your /Applications directory.</p>
+        <p>The resulting <code>Standing Desk App.app</code> file should be moved into your /Applications directory before running.</p>
 
         <h3>
         <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h3>
 
         <hr>
-        <p>Double-click the .app file once it's installed. If it's your first time running the application, you may have to right-click on the .app file and choose "Open" from the dialog box (subsequent times won't require this). In addition, on initial load you should be presented with the Preferences window, giving you a chance to peruse default settings and change them, if need be. Check the box that's labeled "Start application at login?" if you wish to never have to double-click the app ever again.</p>
+        <p>If it's your first time running the application, you may have to right-click on the .app file and choose "Open" from the dialog box (once the app is properly signed, this shouldn't be necessary). In addition, on initial load you should be presented with the Preferences window, giving you a chance to peruse default settings and change them, if need be. Check the box that's labeled "Start application at login?" if you wish to never have to double-click the app ever again.</p>
 
         <h3>
         <a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h3>
