fixed download link class

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
 
             <section id="downloads">
-        <a class="zip_download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/Standing-Desk-App-1.0.zip" title="Download this project as a .zip (v1.0)"></a>
+        <a class="download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/Standing-Desk-App-1.0.zip" title="Download this project as a .zip (v1.0)"></a>
             </section>
         </header>
     </div>
