--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
 
             <section id="downloads">
-        <a class="download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/Standing-Desk-App-1.0.zip" title="Download this project as a .zip (v1.0)"></a>
+        <a class="download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/v1.1/Standing-Desk-App-1.1.zip" title="Download this project as a .zip (v1.1)"></a>
             </section>
         </header>
     </div>
@@ -61,7 +61,7 @@
         <h3>
         <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/1.0/Standing-Desk-App-1.0.zip">Standing Desk App</a> (release v1.0) and double-click the ZIP file that appears on your local hard drive.</p>
+        <hr><p>Download <a href="https://github.com/PuppyBongos/standing-desk-app/releases/download/v1.1/Standing-Desk-App-1.1.zip">Standing Desk App</a> (release v1.1) and double-click the ZIP file that appears on your local hard drive.</p>
 
         <p>The resulting <code>Standing Desk App.app</code> file should be moved into your /Applications directory before running.</p>
 
@@ -102,6 +102,12 @@
 
         <h3>Version History</h3>
         <hr>
+        <p><strong>v1.1</strong> (02/27/2016)</p>
+        <ul>
+          <li>Support for Turkish and French</li>
+          <li>Notification fix so they don't pile up in the Notification Center</li>
+        </ul>
+        
         <p><strong>v1.0</strong> (10/2/2015)</p>
         <ul>
           <li>Updates to CocoaPods and MASShortcut (for keyboard shortcuts)</li>
