added in hints that this is an OS X application

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Standing Desk App : Schedule periods of sitting and standing with menubar application" />
-
+    <meta name="keywords" content="standing, sitting, desk, stand-sit-desk, mac, osx, apple" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
           <a id="forkme_banner" href="https://github.com/PuppyBongos/standing-desk-app">View on GitHub</a>
 
           <h1 id="project_title">Standing Desk App</h1>
-          <h2 id="project_tagline">Schedule periods of sitting and standing with menubar application</h2>
+          <h2 id="project_tagline">Schedule periods of sitting and standing with OS X menubar application</h2>
 
             <section id="downloads">
         <a class="download_link" href="https://github.com/PuppyBongos/standing-desk-app/releases/download/v1.1/Standing-Desk-App-1.1.zip" title="Download this project as a .zip (v1.1)"></a>
@@ -35,7 +35,7 @@
         <h1>
         <a name="standing-desk-app" class="anchor" href="#standing-desk-app"><span class="octicon octicon-link"></span></a>Standing Desk App</h1>
 
-        <p><strong>Standing Desk App</strong> is a small utility by <a href="http://puppybongos.wordpress.com">Puppy Bongos</a> created to time how long you sit and stand while using a standing desk (or even just to remind you to stand up from sitting at a normal desk), all so you don't die from <em>butt death</em>.</p>
+        <p><strong>Standing Desk App</strong> is a small Mac OS X utility by <a href="http://puppybongos.wordpress.com">Puppy Bongos</a> created to time how long you sit and stand while using a standing desk (or even just to remind you to stand up from sitting at a normal desk), all so you don't die from <em>butt death</em>.</p>
 
         <p><strong>Butt death</strong> is the <em>worst</em> kind of death.</p>
         <hr>
